--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,12 @@
   width: 100%;
   height: 100%;
 }
+.codeIcon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 2px solid #242424;
+}
 
 @keyframes App-logo-spin {
   from {
